@@ -67,7 +67,10 @@ test oo-0.4 {basic test of OO's ability to clean up its initial state} -body {
 test oo-0.5 {testing literal leak on interp delete} memory {
     leaktest {
 	interp create foo
-	foo eval {oo::object new}
+	foo eval {
+	    package require TclOO
+	    oo::object new
+	}
 	interp delete foo
     }
 } 0
